DELETE endpoint for issue
